plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
}

group 'org.example'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11

javafx {
    version = "11"
    modules = ['javafx.controls', 'javafx.fxml']
}

repositories {
    jcenter()
    mavenCentral()
}

afterEvaluate {
    run {
        doFirst {
            jvmArgs = [
                    '--module-path', classpath.asPath,
                    '--add-modules', 'javafx.fxml,javafx.controls',
                    '--add-exports', 'javafx.base/com.sun.javafx.runtime=ALL-UNNAMED'
            ]
        }
    }
}

dependencies {
    implementation files('ical-11.8.3.jar')
    compile "com.calendarfx:view:11.8.3"
    compile 'de.jensd:fontawesomefx-commons:11.0'
    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation 'org.optaplanner:optaplanner-core:7.32.0.Final'
}

mainClassName = 'Main'